# productionUtils

./: .gitignore  README.md
CFX_Automation/: CFX_generateDefault.py  CFX_processAnimFile.py  CFX_processOutsourceAnm.py  CFX_run.py  CFX_submitTool.py  README.md  WEFX_Naming_Convention.md  run.bat  run.sh  test.py  testArgparse.py  testPy.bat  testrun.py  tmpAnim
Natron/: restoreDefaultSettings.md  xRiteColorChart.ntp
WIP/: abcImportExport_wip.py  createBlacBarMaskForHDToFilmRatio.bat  everyotherFrameList.py  exportEveryOtherFrameList.py
convertToTx/: ConvertToTx.reg  makeTx.bat  maketx.reg
deformerOnMesh/: call.txt  deformerOnMesh.py
houdini/: getJobDependency.py
hythonMantraPreRenderPathMap/: MantraPreRenderPathMapping.py  SelMantraPreRenderPathMapping.py  dropOnToMe.bat  pathmap.py
makeHumanToMayaHumanIK/: makeHumanFBXJointCleanUp.bat  makehumanFBXcleanup.py
makeTx/: UI_makeTx.py  makeTxTool.py
mayaAvoidIntersector/: moveCurveCVToClosestPointOnMesh.py  moveCurveKnotToClosestPointOnMesh.py
mayaAvoidIntersector/mayaPlugInBase/src/: AvoidIntersectorCmd.cpp  AvoidIntersectorCmd.h  CMakeLists.txt
mayaPlugInBase/: CMakeLists.txt
mayaScripts/: chanFileToObjectRetime.py  chanFileToSceneTimeWarp.py  copyTransform.py  copyYetiTexToFolder.py  faceSetByColor.py  hw2RenderGlobals.py  importAlembicFiles.py  mayaLastActive3DViewScreenCapture.py  mayaPolyImagePlane.py  mayaToXYZ.py  moveAlongNormal.py  moveCurveKnotToClosestPointOnMesh.py  movePivottoCenterBottom.py  moveVertextToSource.py  multipleParentConstraint.py  queryAnimationCurveValueByFrame.py  vel.py  (+10 more)
(+91 files in other folders)
